# CIV4-WhoS-Where

./: .gitattributes  .gitignore  CIV4Notes.txt  README.md  main.py  pyproject.toml
data/: gt_headings.txt  mapping.json
data/bounding_boxes_with_labels/: all.csv  test.csv  train.csv  val.csv
notebooks/: CutAreas.ipynb  anotator.py  cut_images.ipynb  data_loading_augmentation.ipynb  data_loading_augmentation.py  match_lables_with_gt.ipynb  train_model.ipynb  utils.py  view_images.ipynb
notebooks/models/: meta_habitat.json  predictions_habitat.csv  training_history_habitat.csv
